setup/deploy-to-hoster/armtemplates/azuredeployOnPrem.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "adminUsername": {
            "type": "string",
            "minLength": 1,
            "defaultValue": "demouser",
            "metadata": {
              "description": "Username for the Virtual Machine."
            }
        },
        "adminPassword": {
            "type": "securestring",
            "defaultValue": "demo!pass123",
            "metadata": {
              "description": "Password for the Virtual Machine."
            }
        }
    },
    "variables": {
        "hostVMname": "cmhost",
        "hostNICname": "cmhostnic",
        "hostOSdisk": "[concat(variables('hostVMname'),'_OsDisk')]",
        "hostDATAdisk": "[concat(variables('hostVMname'),'_DataDisk')]",
        "publicIPAddressName": "cmhostip",
        "VNETName": "onpremvnet",
        "cmPrefix": "10.0.0.0/16",
        "cmSubnetPrefix": "10.0.0.0/24",
        "cmhostSubnetName": "Hyper-V-LAN",
        "hostNSGName": "cmhostnsg",
        "dnsLabelPrefix": "cmfinance",
        "customScriptFolder": "./scripts",
        "customScriptUriScriptFileName": "BootstrapCMHost.ps1",
        "customScriptUri": "https://openhackguides.blob.core.windows.net/migration-open-hack-artifacts/scripts/BootstrapCMHost.ps1"
    },
    "resources": [
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('hostVMname')]",
            "apiVersion": "2018-06-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D16s_v3"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[variables('hostOSdisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"
                        },
                        "diskSizeGB": 127
                    },
                    "dataDisks": [
                        {
                            "lun": 0,
                            "name": "[variables('hostDATAdisk')]",
                            "createOption": "Attach",
                            "caching": "None",
                            "managedDisk": {
                                "id": "[resourceId('Microsoft.Compute/disks/', variables('hostDATAdisk'))]"
                            }
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[variables('hostVMname')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('hostNICname'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('hostNICname'))]",
                "[resourceId('Microsoft.Compute/disks/', variables('hostDATAdisk'))]"
            ],
            "resources": [
                {
                    "name": "CustomScriptExtension",
                    "type": "extensions",
                    "apiVersion": "2016-03-30",
                    "location": "[resourceGroup().location]",
                    "dependsOn": [
                        "[resourceId('Microsoft.Compute/virtualMachines', variables('hostVMname'))]"
                    ],
                    "tags": {
                        "displayName": "ConfigureHost"
                    },
                    "properties": {
                        "publisher": "Microsoft.Compute",
                        "type": "CustomScriptExtension",
                        "typeHandlerVersion": "1.4",
                        "autoUpgradeMinorVersion": false,
                        "settings": {
                            "fileUris": [
                                "[variables('customScriptUri')]"
                            ],
                            "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -File ', variables('customScriptFolder'), '/', variables('customScriptUriScriptFileName'))]"
                        }
                    }
                }
            ]
        },
        {
            "type": "Microsoft.Compute/disks",
            "name": "[variables('hostDATAdisk')]",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Premium_LRS"
            },
            "properties": {
                "creationData": {
                    "createOption": "Empty"
                },
                "diskSizeGB": 1023
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('hostNICname')]",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VNETName'), variables('cmhostSubnetName'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('hostNSGName'))]"
                },
                "primary": true,
                "enableAcceleratedNetworking": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', variables('hostVMname'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/', variables('VNETName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('hostNSGName'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('hostNSGName')]",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "securityRules": [
                    {
                        "name": "RemoteDesktop",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 310,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTPAdmin",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8080",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 320,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "RRASUDP500",
                        "properties": {
                            "protocol": "Udp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "500",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 330,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "RRASUDP4500",
                        "properties": {
                            "protocol": "Udp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "4500",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 340,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "RRASUDP1701",
                        "properties": {
                            "protocol": "Udp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1701",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 350,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[variables('publicIPAddressName')]",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[concat(variables('dnsLabelPrefix'), uniqueString(resourceGroup().id, deployment().name))]"
                },
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "apiVersion": "2016-03-30",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('VNETName')]",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('cmPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('cmhostSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('cmSubnetPrefix')]"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Authorization/locks",
            "apiVersion": "2015-01-01",
            "name": "openhackonpremrglock",
            "properties":
            {
                "level": "ReadOnly",
                "notes": "ReadOny resource lock on openhackonpremrg"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', variables('hostVMname'))]",
                "[resourceId('Microsoft.Compute/virtualMachines/extensions', variables('hostVMname'),'CustomScriptExtension')]"
            ]
        }
    ]
}
